--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: linux
 dist: bionic
 
 script:
-  - cd build && rm -rf *
+  - mkdir build && cd build
   - cmake -DCMAKE_BUILD_TYPE=Release -DULOCAL_TESTS=ON -DULOCAL_EXAMPLES=ON ..
   - cmake --build . --target install -- -j
   - ./tests/unit/ulocal_unit_tests
