--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 os: linux
 dist: bionic
 install:
-  - sudo apt-get install -y python3-pip
+  - sudo apt-get install -y python3-pip python3-setuptools
 
 script:
   - mkdir build && cd build
