Getting rid of warning in Travis CI which just says we don't have wheel installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 os: linux
 dist: bionic
 install:
-  - sudo apt-get install -y python3-pip python3-setuptools
+  - sudo apt-get install -y python3-pip python3-setuptools python3-wheel
 
 script:
   - mkdir build && cd build
